solved alignment issue in blog archive

--- a/styles/main.css
+++ b/styles/main.css
@@ -83,6 +83,10 @@ a {
   padding-right: 10px;
 }
 
+.row {
+  padding-left: 50px;
+}
+
 
 footer {
   display: flex;
